--- a/hosted/style.css
+++ b/hosted/style.css
@@ -47,76 +47,6 @@ nav:nth-child(1) {
     background-color: #66bdff;
 }
 
-.domoForm {
-    display: flex;
-    border: 2px solid #338acc;
-    height: 40px;
-    width: 700px;
-    margin-top:0px;
-    padding-top:10px;
-    background-color: #55acee;
-    border-bottom-right-radius: 4px;
-    border-top-right-radius: 4px;
-}
-
-.domoForm label {
-    padding: 0 10px 0 10px; 
-    font-size: 1.2em;
-    color: white;
-}
-
-.domoForm input[type=text] {
-    float:left;
-    width: 100px;
-    height: 50%;
-}
-
-.domoForm input[type=number] {
-    float:left;
-    width: 100px;
-    height: 50%;
-}
-
-.makeDomoSubmit {
-    transition: background-color 0.4s ease;
-    text-align: center;
-    background-color: #55acee;
-    border-radius: 2px;
-    border-color: white;
-    color: white;
-    text-decoration: none;
-    transition: background-color 0.4s ease;
-    display: inline;
-    width: 90px;
-    height: 50%;
-    margin: 0 20px 0 20px; 
-}
-
-.deleteDomoButton {
-    transition: background-color 0.4s ease;
-    text-align: center;
-    background-color: #55acee;
-    border-radius: 2px;
-    border-color: white;
-    color: white;
-    text-decoration: none;
-    transition: background-color 0.4s ease;
-    display: inline;
-    width: 100px;
-    height: 30px;
-    margin: 0 20px 0 20px; 
-    align-self: center;
-}
-
-.makeDomoSubmit:link, .makeDomoSubmit:visited, .makeDomoSubmit:hover, .makeDomoSubmit:active {
-    color: white;
-}
-
-.makeDomoSubmit:hover {
-    transition: background-color 0.4s ease;
-    background-color: #338acc;
-}
-
 .mainForm {
     height: 300px;
     width: 350px;
@@ -178,7 +108,7 @@ nav:nth-child(1) {
     display: none;
 }
 
-#domoMessage {
+#errorMessage {
     top: 250px;
     width: 250px;
     height: 650px;
@@ -188,7 +118,7 @@ nav:nth-child(1) {
     overflow: hidden;
 }
 
-#domoMessage h3 {
+#errorMessage h3 {
     width: 200px;
     position: absolute;
     top: 0px;
@@ -201,100 +131,9 @@ nav:nth-child(1) {
     z-index:300;
 }
 
-#errorMessage {
+#errorText {
     font-size: 1.2em;
     font-weight: bold;
     color: red;
     font-style: italic;
-}
-
-#domo {
-    z-index: 225;
-    margin-top: -20px;
-    margin-left: 135px;
-    height: 450px;
-    width: 300px;
-    -ms-transform: rotate(330deg);
-    -webkit-transform: rotate(330deg); 
-    transform: rotate(330deg);
-}
-
-#domos {
-    width: 90%;
-    min-width: 400px;
-    border: 2px solid #55acee;
-    border-radius: 4px;
-    margin: 0 auto;
-    margin-top: 100px;
-}
-
-.domo {
-    display: flex;
-    width: 95%;
-    margin: 0 auto;
-    margin-top: 2px;
-    margin-bottom: 2px;
-    border: 2px solid #55acee;
-    border-radius: 4px;
-    background-color: #55acee;
-    padding: 10px;
-    min-height:60px;
-    overflow: hidden;
-    align-items: baseline;
-    justify-content: space-between;
-}
-
-.domo:hover {
-    transition: border-color 0.2s ease-out;
-    border-color: rgba(255,255,255, 0.8);
-    transition: background-color 2.6s ease-out;
-    background-color: #66bfff;
-}
-
-.domoTitle {
-    display: flex;
-    width: 200px;
-}
-
-img.domoFace {
-    margin-left: 10px;
-    margin-right: 10px;
-    height: 50px;
-    width: 50px;
-    border-radius: 4px;
-    align-self: center;
-}
-
-h3.emptyDomo {
-    width: 400px;
-    font-size: 1.5em;
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 18px;
-}
-
-h3.domoName {
-    font-weight: bold;
-    font-size: 1.5em;
-}
-
-h3.domoAge {
-    width: 80px;
-    margin: 0 10px 0 10px;
-    font-weight: bold;
-    font-size: 1.2em;
-}
-
-h3.domoPowerLvl {
-    width: 180px;
-    font-weight: bold;
-    font-size: 1.2em;
-}
-
-.domo:first-child {
-    margin-top: 10px;
-}
-
-.domo:last-child {
-    margin-bottom:10px;
 }
