--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -9,17 +9,27 @@
 </head>
 <body>
   <nav><a href="/login"><img id="logo" src="/assets/img/face.png" alt="face logo"/></a>
-    <div class="navlink"><a href="/logout">Log out</a></div>
+    <div class="navlink"><a id="changePasswordButton" href="/changePassword">Change Password</a></div>
+    <div class="navlink"><a id="logoutButton" href="/logout">Log out</a></div>
   </nav>
-  
-  <div id="premium">
 
-  </div>
+  <h1>Add a Location-based Quote:</h1>
+  <section id="locationJarQuote"></section>
+  <h1>Quotes from your Current Location: </h1>
+  <section id="locationJar"></section>
+
+  <h1>Your Private Jars:</h1>
+  <section id="personalJarSelector"></section>
+  
+  <h2>Upgrade to premium?</h2>
+  <section id="premium"></section>
 
   <div id="errorMessage" class='hidden'>
     <img id="speech" src="/assets/img/speech.png" alt="speech box"/>
     <h3><span id="errorText"></span></h3>
   </div>
-  <script src="/assets/appBundle.js"></script>
+  <script src="/assets/premiumBundle.js"></script>
+    <script src="/assets/quoteBundle.js"></script>
+      <script src="/assets/jarBundle.js"></script>
 </body>
 </html>
