--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -9,6 +9,7 @@
 </head>
 <body>
   <nav><a href="/login"><img id="logo" src="/assets/img/face.png" alt="face logo"/></a>
+      <div class="navlink"><a id="ownerQuoteButton" href="/getOwnerQuotes">See Your Quotes</a></div>
     <div class="navlink"><a id="premiumButton" href="/setPremium">Change Premium Status</a></div>
     <div class="navlink"><a id="logoutButton" href="/logout">Log out</a></div>
   </nav>
