--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
 </head>
 <body>
-  <nav><a href="/login"><img id="logo" src="/assets/img/face.png" alt="face logo"/></a>
+  <nav><a id="mainAppButton" href="/app"><img id="logo" src="/assets/img/face.png" alt="face logo"/></a>
       <div class="navlink"><a id="ownerQuoteButton" href="/getOwnerQuotes">See Your Quotes</a></div>
     <div class="navlink"><a id="premiumButton" href="/setPremium">Change Premium Status</a></div>
     <div class="navlink"><a id="logoutButton" href="/logout">Log out</a></div>
