--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -21,6 +21,11 @@
     <img id="speech" src="/assets/img/speech.png" alt="speech box"/>
     <h3><span id="errorText"></span></h3>
   </div>
+
+  <div id="locationErrorMessage" class='hidden'>
+    <img id="speech" src="/assets/img/speech.png" alt="speech box"/>
+    <h3><span id="locationErrorText"></span></h3>
+  </div>
   <script src="/assets/appBundle.js"></script>
   <script src="/assets/premiumBundle.js"></script>
   <script src="/assets/quoteBundle.js"></script>
