--- a/hosted/style.css
+++ b/hosted/style.css
@@ -4,136 +4,177 @@ html, body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: column;
+}
+
+.body {
+    flex: 1 0 auto;
 }
 
 #logo {
     height: 40px;
     width: 40;
+    float: left;
     padding-top: 5px;
-    float:left;
-    border-radius: 8px;
 }
 
 nav {
     width: 100%;
     height: 50px;
-    background-color: #55acee;
+    background-color: #D997A8;
 }
 
-nav:nth-child(1) {
-    padding-left: 25px;
-}
-
-.navlink {
-    padding: 5px;
-    padding-top: 12px;
-    padding-left: 20px;
+.mainNavLink {
+    padding: 12px 0 20px;
     color: white;
     font-size: 1.3em;
     float: left;
 }
 
+.mainNavlink a {
+    color: white;
+    text-decoration: none;
+    padding: 12px;
+    background-color: #D997A8;
+    transition: background-color 0.4s ease;
+}
+
+.navlink {
+    padding: 12px 0 20px;
+    color: white;
+    font-size: 1.3em;
+    float: right;
+}
+
 .navlink a, .navlink a:link, .navlink a:visited, .navlink a:hover, .navlink a:active {
     color: white;
     text-decoration: none;
-    padding: 5px;
-    border-radius: 4px;
-    background-color: #55acee;
+    padding: 12px;
+    background-color: #D997A8;
     transition: background-color 0.4s ease;
 }
 
 .navlink a:hover {
     transition: background-color 0.8s ease;
-    background-color: #66bdff;
+    background-color: #FF91AD;
 }
 
 .mainForm {
-    height: 300px;
-    width: 350px;
-    margin: 0 auto;
-    padding-top: 350px;
-    font-size: 1.2em;
-}
+    margin: 0 auto 0 auto;
+    width: 50%;
+    padding: 10px 0 10px 0;
 
-.mainForm h3 {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .mainForm label {
-    display: inline-block;
-    width: 100px;
-    margin-right: 10px;
-    text-align: right;
-    font-size: 1.2em;
-}
-
-.formSubmit {
-    transition: background-color 0.4s ease;
-    display: block;
     text-align: center;
-    margin: 0 auto;
-    margin-top: 14px;
-    font-size: 1.2em;
-    width: 100px;
-    background-color: #55acee;
-    border-radius: 2px;
-    border-color: #66acee;
-    padding: 3px 0px;
+    margin: 2px 0 2px 0;
+}
+
+.mainForm input[type=text], .mainForm input[type=password] {
+    margin: auto;
+}
+
+button, input[type=submit] {
+    margin: .8em;
+    background-color: #D997A8;
+    border: none;
+    padding: .5em;
+  
     color: white;
-    text-decoration: none;
+    text-transform: uppercase;
+    font-size: .75em;
 }
 
-.formSubmit:link, .formSubmit:visited, .formSubmit:hover, .formSubmit:active {
-    color: white;
+button:hover, input[type=submit]:hover {
+    transition: background-color 0.8s ease;
+    background-color: #FF91AD;
 }
 
-.formSubmit:hover {
-    transition: background-color 0.4s ease;
-    background-color: #338acc;
+button:active, input[type=submit]:active {
+    transition: background-color 0.8s ease;
+    background-color: #FF91AD;
 }
 
-#user, #pass, #pass2 {
+#user, #pass, #pass2, #oldPass, #newPass, #newPass2, #quoteCopy {
     text-align: center;
     font-size: 1.1em;
     width: 180px;
-    border-radius: 6px;
+    margin: 5px 0 5px 0;
 }
 
-#user:focus, #pass:focus, #pass2:focus {
+#user:focus, #pass:focus, #pass2:focus, #oldPass:focus, #newPass:focus, #newPass2:focus, #quoteCopy:focus {
     outline: none;
-    box-shadow: 0px 0px 1px 1px #55acee;
+    box-shadow: 0px 0px 1px 1px #D997A8;
 }
 
 .hidden {
     display: none;
 }
 
+.pageHeader {
+    margin: 1 0 auto 0;
+    padding: 8px 0 8px 0;
+    text-align: center;
+
+    background-color: #c23759;
+    color: white;
+}
+
+.quoteObject {
+    margin: 0 auto 0 auto;
+    width: 100%;
+    padding: 10px 0 10px 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    border: solid;
+    border-width: 0 0 10px 0;
+    border-color: #c23759;
+}
+
+.quoteObject h2 {
+    text-align: center;
+    width: 50%;
+}
+
+.popularityObject {
+    display: flex;
+    justify-content: center;
+    line-height: 0;
+}
+
 #errorMessage, #locationErrorMessage {
-    top: 250px;
-    width: 250px;
-    height: 650px;
-    position: absolute;
-    z-index: 200;
-    right: 0px;
-    overflow: hidden;
+    padding: 8px 0 8px 0;
+    background-color: #c23759;
 }
 
 #errorMessage h3, #locationErrorMessage h3 {
-    width: 200px;
-    position: absolute;
-    top: 0px;
-    left: 20px;
-}
-
-#speech {
-    height: 120px;
-    width: 250px;
-    z-index:300;
-}
-
-#errorText, #locationErrorText {
+    margin: 0 auto 0 auto;
+    text-align: center;
     font-size: 1.2em;
-    font-weight: bold;
-    color: red;
-    font-style: italic;
+    color: white;
+}
+
+footer {
+    text-align: center;
+    margin: auto 0 1 0;
+    width: 100%;
+
+    color: white;
+    background-color: #D997A8;
+}
+
+footer p {
+    margin: 0 auto 0 auto;
+    width: 40%;
 }
